--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minhas Memórias Escolares</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Cabeçalho -->
+    <header>
+        <h1>Minhas Memórias Escolares</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">História Escolar</a>
+                    <ul>
+                        <li><a href="#">Ensino Fundamental</a></li>
+                        <li><a href="#">Escolas e Bairros</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Futuro</a>
+                    <ul>
+                        <li><a href="#">Carreira Militar</a></li>
+                        <li><a href="#">Planos Alternativos</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Conteúdo principal -->
+    <main>
+        <section>
+            <h2>Minhas Memórias Escolares</h2>
+            <h3>História Escolar</h3>
+            <p>No Tatuquara iniciei o ensino fundamental no Dona Pompilia até o 4° ano. Devido a problemas, saímos e fomos para Araucária, e passei a estudar no Pietruza e morar em uma chácara alugada. Depois encontramos um terreno onde moro atualmente no Umbará, um bairro bom, e estudo no Colégio Morelli.</p>
+            <p>Durante esse tempo, sem contar a pandemia onde paramos, iniciei minha formação acadêmica, dando prioridade aos cursos gratuitos oferecidos pelo CRAS. Iniciei também um trabalho próximo à escola e me habituei lá.</p>
+
+            <h3>Futuro</h3>
+            <p>Ao finalizar o colégio, pretendo servir o exército, saindo do meu trabalho e seguir uma carreira militar. Se não der certo, entrarei em uma empresa multinacional. Mas minha verdadeira vontade é ir para a natureza, morar em uma chácara e aproveitar o que mais gosto. Infelizmente, só existimos em um mundo, e buscamos melhorar o que é alcançável.</p>
+
+            <p>Saio deste colégio com muitas boas lembranças e busco alcançar o melhor para meu futuro, com metas e sonhos alcançáveis.</p>
+        </section>
+    </main>
+
+    <!-- Rodapé -->
+    <footer>
+        <p>Escola: Padre Cláudio Morelli</p>
+        <p>Nome do Aluno: Gustavo Santana, Nº 15</p>
+    </footer>
+</body>
+</html>
