--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -42,6 +41,15 @@
             <p>Ao finalizar o colégio, pretendo servir o exército, saindo do meu trabalho e seguir uma carreira militar. Se não der certo, entrarei em uma empresa multinacional. Mas minha verdadeira vontade é ir para a natureza, morar em uma chácara e aproveitar o que mais gosto. Infelizmente, só existimos em um mundo, e buscamos melhorar o que é alcançável.</p>
 
             <p>Saio deste colégio com muitas boas lembranças e busco alcançar o melhor para meu futuro, com metas e sonhos alcançáveis.</p>
+            
+            <!-- Seção de Imagens -->
+            <h3>Minhas Memórias em Imagens</h3>
+            <p>Abaixo estão algumas imagens que representam momentos especiais:</p>
+            <div class="image-gallery">
+                <img src="Screenshot_20241017-150200_WhatsApp.jpg" alt="Imagem 1" />
+                <img src="Screenshot_20241017-150214_WhatsApp.jpg" alt="Imagem 2" />
+                <img src="Screenshot_20241017-150236_WhatsApp.jpg" alt="Imagem 3" />
+            </div>
         </section>
     </main>
 
@@ -52,3 +60,4 @@
     </footer>
 </body>
 </html>
+
