--- a/index.html
+++ b/index.html
@@ -46,9 +46,18 @@
             <h3>Minhas Memórias em Imagens</h3>
             <p>Abaixo estão algumas imagens que representam momentos especiais:</p>
             <div class="image-gallery">
-                <img src="Screenshot_20241017-150200_WhatsApp.jpg" alt="Imagem 1" />
-                <img src="Screenshot_20241017-150214_WhatsApp.jpg" alt="Imagem 2" />
-                <img src="Screenshot_20241017-150236_WhatsApp.jpg" alt="Imagem 3" />
+                <figure>
+                    <img src="Screenshot_20241017-150200_WhatsApp.jpg" alt="Imagem 1" />
+                    <figcaption>Legenda da Imagem 1</figcaption>
+                </figure>
+                <figure>
+                    <img src="Screenshot_20241017-150214_WhatsApp.jpg" alt="Imagem 2" />
+                    <figcaption>Legenda da Imagem 2</figcaption>
+                </figure>
+                <figure>
+                    <img src="Screenshot_20241017-150236_WhatsApp.jpg" alt="Imagem 3" />
+                    <figcaption>Legenda da Imagem 3</figcaption>
+                </figure>
             </div>
         </section>
     </main>
@@ -60,4 +69,3 @@
     </footer>
 </body>
 </html>
-
