--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <div class="image-gallery">
                 <figure>
                     <img src="Screenshot_20241017-150200_WhatsApp.jpg" alt="Imagem 1" />
-                    <figcaption>Legenda da Imagem 1</figcaption>
+                    <figcaption>é os guri né</figcaption>
                 </figure>
                 <figure>
                     <img src="Screenshot_20241017-150214_WhatsApp.jpg" alt="Imagem 2" />
-                    <figcaption>Legenda da Imagem 2</figcaption>
+                    <figcaption>o melhor prof do mundo ai</figcaption>
                 </figure>
                 <figure>
                     <img src="Screenshot_20241017-150236_WhatsApp.jpg" alt="Imagem 3" />
-                    <figcaption>Legenda da Imagem 3</figcaption>
+                    <figcaption>meu am,igao guilhermino</figcaption>
                 </figure>
             </div>
         </section>
