--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </figure>
                 <figure>
                     <img src="Screenshot_20241017-150236_WhatsApp.jpg" alt="Imagem 3" />
-                    <figcaption>meu am,igao guilhermino</figcaption>
+                    <figcaption>meu amigao guilhermino</figcaption>
                 </figure>
             </div>
         </section>
